c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_types/conflicting_variable_linkage.c
/* This declares foo with internal linkage */
static int foo;

int main(void) {
    return foo;
}

/* This declares foo with external linkage,
 * which conflicts with the previous declaration
 */
int foo = 3;